--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ torch = {version = "^1.13.0", python = "^3.8", platform = "linux"}
 numpy = "^1.23.4"
 transformers = "^4.24.0"
 pytest = "^7.2.0"
+sentencepiece = "^0.1.97"
 
 
 [build-system]
