add hf_wrappers like venv-torch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Ryan Reece <ryan.d.reece@live.com>"]
 readme = "README.md"
-packages = [{include = "poetry_torch"}]
+packages = [
+    {include = "hf_wrappers"},
+    {include = "poetry_torch"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
