--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install poetry
+        pip install flake8
+        pip install poetry==1.2.2
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
