--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,17 @@ description = ""
 authors = ["Ryan Reece <ryan.d.reece@live.com>"]
 readme = "README.md"
 packages = [
-    {include = "hf_wrappers"},
-    {include = "poetry_torch"},
+    {include = "hf_wrappers", from="python"},
+    {include = "poetry_torch", from="python"},
 ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-torch = {version = "^1.13.0", python = "^3.8", platform = "linux"}
 numpy = "^1.23.4"
-transformers = "^4.24.0"
 pytest = "^7.2.0"
 sentencepiece = "^0.1.97"
-
+torch = {version = "^1.13.0", python = "^3.8", platform = "linux"}
+transformers = "^4.24.0"
 
 [build-system]
 requires = ["poetry-core"]
